<resources>
    <string name="app_name">MenuHamburguesa</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Joahan Garcia</string>
    <string name="nav_header_subtitle">joahan_garcia@hotmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Ver QR</string>
    <string name="menu_info">Consultar condicion y familia</string>
    <string name="menu_calificar">Calificar comedor</string>
    <string name="menu_mapas">Consultar Mapa</string>
    <string name="menu_cerrarSesion">Cerrar Sesion</string>
    <string name="menu_Inicio">Menu de Inicio</string>
    <string name="menu_registrarse">Registrarse</string>
    <string name="menu_inicio_mapas">Localizacion de Comedores</string>
    <string name="menu_menu">Menu del dia</string>
</resources>